fix: correct header alignment on search page

--- a/_sass/layout/default.scss
+++ b/_sass/layout/default.scss
@@ -87,7 +87,8 @@
 
   &.changelog-title,
   &.page-title,
-  &.page_full-title {
+  &.page_full-title,
+  &.search-title {
     @media screen and (min-width: $desktop) {
       margin: 0 250px;
     }
